# exerciciosEmbarcatech

./: tarefa_u1c7_NeoControlLab.rar  tarefa_u2c2_wifi_temp.rar
tarefa_u1c10_foreground_background/: Atividade_5.c  funcao_atividade_.c  funcao_atividade_.h  funcoes_neopixel.c  funcoes_neopixel.h
tarefa_u1c2_monitor_multicore/: CMakeLists.txt  monitor_multicore.c
tarefa_u1c3_captar_som_adc/: CMakeLists.txt  captar_som.c  neopixel.c
tarefa_u1c4_temporizadores/: CMakeLists.txt  tarefaU1C4Temporizadores.c
tarefa_u1c6_usb_eco/: CMakeLists.txt  tarefa_u1c6_usb_eco.c
tarefa_u1c7_NeoControlLab/: CMakeLists.txt  NeoControlLab.c
tarefa_u1c8_wifi/: lwipopts.h  main.c
tarefa_u1c8_wifi/inc/: buzzer.h
tarefa_u1c8_wifi/src/: buzzer.c
tarefa_u1c8_wifi/src/display/: oled_messages.c
tarefa_u1c9_ciclico/: CMakeLists.txt  main.c  setup.c  tarefa3_tendencia.c
tarefa_u1c9_ciclico/inc/: display_utils.c  efeitos.h
tarefa_u1c9_ciclico/src/: big_string_drawer.c  display_utils.c  efeitos.c  font_big_logo_data.c  irq_handlers.c  setup.c  ssd1306_i2c.c  testes_cores.c  util.c
tarefa_u1c9_ciclico/src/tarefas/: tarefa1_temp.c  tarefa2_display.c  tarefa2_displayback.c  tarefa3_tendencia.c  tarefa4_controla_neopixel.c
tarefa_u2c2_wifi_temp/: CMakeLists.txt  lwipopts.h  tarefa_u2c2_wifi_temp.c
tarefa_u2c2_wifi_temp/dhcpserver/: dhcpserver.c  dhcpserver.h
tarefa_u2c2_wifi_temp/dnsserver/: dnsserver.c  dnsserver.h
tarefa_u2c3_Atividade_3_MQTT_2/: configura_geral.h  main_auxiliar.c
tarefa_u3c1_FreeRTOS/: CMakeLists.txt
tarefa_u3c1_FreeRTOS/inc/: button_handler.h  digitos_grandes_utils.h  display_contador.h  fsm_semaforo.h  numeros_grandes.h  oled_display.h  oled_setup.h  semaforo_rgb.h  ssd1306_font.h
tarefa_u3c1_FreeRTOS/src/: CMakeLists.txt  button_handler.c  digitos_grandes_utils.c  display_contador.c  fsm_semaforo.c  main.c  numeros_grandes.c  semaforo_rgb.c
tarefa_u3c2_FreeRTOS_escalonamento/: CMakeLists.txt
tarefa_u3c2_FreeRTOS_escalonamento/inc/: botoes.h  leds_rgb.h  perifericos.h  tarefas.h  tarefas_rgb_smp.h  task_gerenciadora.h
tarefa_u3c2_FreeRTOS_escalonamento/src/: CMakeLists.txt  botoes.c  leds_rgb.c  main.c  perifericos.c  tarefas.c  tarefas_rgb_smp.c  task_gerenciadora.c
tarefa_u3c3_FreeRTOS_ProgramacaoMultithread/: .gitignore  CMakeLists.txt
tarefa_u3c3_FreeRTOS_ProgramacaoMultithread/inc/: bitdoglab_pins.h  tarefas.h
tarefa_u3c3_FreeRTOS_ProgramacaoMultithread/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c  tarefas.c
tarefa_u3c3_FreeRTOS_ProgramaçãoMultithread/: CMakeLists.txt
tarefa_u3c3_FreeRTOS_ProgramaçãoMultithread/inc/: perifericos.h
tarefa_u3c3_FreeRTOS_ProgramaçãoMultithread/src/: CMakeLists.txt  main.c  tarefas.c
